Install shared-mime-info as a rails dependency

--- a/share/Dockerfile.erb
+++ b/share/Dockerfile.erb
@@ -65,7 +65,7 @@ FROM <%= base_image %>
   # nio4r on JRuby: libgmp-dev
   # Snappy compression: libsnappy-dev
   # nokogiri: zlib1g-dev
-  # Mongoid testing: tzdata
+  # Mongoid testing: tzdata shared-mime-info
   # Mongoid application testing: nodejs (8.x or newer)
   #
   # We currently use Python 2-compatible version of mtools, which
@@ -79,7 +79,7 @@ FROM <%= base_image %>
     libsnmp30
     krb5-user krb5-kdc krb5-admin-server libsasl2-dev libsasl2-modules-gssapi-mit
     python-pip python2.7-dev python3-pip
-    tzdata
+    tzdata shared-mime-info
   ) %>
 
   # ubuntu1404 only has openjdk-7-jre-headless
