--- a/share/Dockerfile.erb
+++ b/share/Dockerfile.erb
@@ -167,7 +167,7 @@ FROM <%= base_image %>
     pip install mtools-legacy[mlaunch]
 
   <% if @env.fetch('MONGODB_VERSION') >= '4.4' %>
-    RUN python3 -mpip install asn1crypto oscrypto flask
+    RUN python3 -mpip install asn1crypto oscrypto flask --upgrade
   <% end %>
 
   <% unless ruby_head? %>
