--- a/share/Dockerfile.erb
+++ b/share/Dockerfile.erb
@@ -83,6 +83,11 @@ FROM <%= base_image %>
     tzdata shared-mime-info
   ) %>
 
+  <% if distro =~ /ubuntu1404/ %>
+    # For building python & setuptools
+    <% packages += %w(libssl-dev unzip) %>
+  <% end %>
+
   <% if distro !~ /ubuntu2004/ %>
     <% packages += %w(python2.7-dev) %>
   <% end %>
@@ -183,6 +188,28 @@ CFG
 <% end %>
 
 <% if preload? %>
+
+  <% if distro =~ /ubuntu1404/ %>
+    
+    # I couldn't find a prebuilt package of anything more recent than 2.7.6
+    # for 14.04.
+    RUN curl --retry 3 -fL https://www.python.org/ftp/python/2.7.16/Python-2.7.16.tar.xz | \
+      tar xfJ - && \
+      cd Python-2.7.16 && \
+      ./configure && \
+      nice make -j4 && \
+      make install && \
+      cd .. && rm -rf Python-2.7.16
+      
+    ENV PATH=/usr/local/bin:$PATH
+    
+    RUN curl --retry 3 -fL -o setuptools-44.1.1.zip https://files.pythonhosted.org/packages/b2/40/4e00501c204b457f10fe410da0c97537214b2265247bc9a5bc6edd55b9e4/setuptools-44.1.1.zip && \
+      unzip setuptools-44.1.1.zip && \
+      cd setuptools-44.1.1 && \
+      python setup.py install && \
+      cd .. && rm -rf setuptools-44.1.1
+
+  <% end%>
 
   <% if true || distro =~ /rhel|ubuntu1604/ %>
 
