Make app tests default to ubuntu2004, make them work on this distro

--- a/share/Dockerfile.erb
+++ b/share/Dockerfile.erb
@@ -111,7 +111,7 @@ ENV DOCKER=1
     <% packages << 'libcurl3' %>
   <% end %>
 
-  <% if distro =~ /ubuntu1804/ %>
+  <% if distro =~ /ubuntu1804|ubuntu2004/ %>
     <% packages << 'nodejs' %>
   <% end %>
 
