--- a/share/Dockerfile.erb
+++ b/share/Dockerfile.erb
@@ -243,7 +243,7 @@ CFG
     # boto3~=1.19 cryptography~=3.4.8 pykmip~=0.10.0
     # cryptography does not install due to lacking setuptools_rust
     # (either that version or anything that isn't part of system packages)
-    RUN python3 -mpip install boto3~=1.19 cryptography pykmip~=0.10.0
+    RUN python3 -mpip install boto3~=1.19 cryptography pykmip~=0.10.0 'sqlalchemy<2.0.0'
   <% end %>
 
   <% unless ruby_head? || system_ruby? %>
