--- a/share/Dockerfile.erb
+++ b/share/Dockerfile.erb
@@ -7,7 +7,7 @@
 <%
 
 python_toolchain_url = "https://s3.amazonaws.com//mciuploads/mongo-python-driver-toolchain/#{distro}/ba92de2700c04ee2d4f82c3ffdfc33105140cb04/mongo_python_driver_toolchain_#{distro.gsub('-', '_')}_ba92de2700c04ee2d4f82c3ffdfc33105140cb04_19_11_14_15_33_33.tar.gz"
-server_version = '4.3.3'
+# server_version = '4.3.3'
 server_url = "http://downloads.10gen.com/linux/mongodb-linux-x86_64-enterprise-#{distro}-#{server_version}.tgz"
 server_archive_basename = File.basename(server_url)
 server_extracted_dir = server_archive_basename.sub(/\.(tar\.gz|tgz)$/, '')
@@ -77,12 +77,12 @@ ENV DOCKER=1
   # therefore install python-pip in all configurations here.
 
   <% packages = %w(
-    procps lsb-release bzip2 curl zsh
+    procps lsb-release bzip2 curl wget gpg zsh
     git make gcc libyaml-0-2 libgmp-dev zlib1g-dev libsnappy-dev
     krb5-user krb5-kdc krb5-admin-server libsasl2-dev libsasl2-modules-gssapi-mit
     haproxy
     python3-pip
-    tzdata shared-mime-info
+    tzdata shared-mime-info software-properties-common
   ) %>
 
   <% if distro =~ /ubuntu2004/ %>
@@ -120,16 +120,22 @@ ENV DOCKER=1
   <% end %>
 
   RUN apt-get update && apt-get install -y <%= packages.join(' ') %>
-  
+
+  <% if ubuntu? %>
+    RUN wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null
+    RUN echo "deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/kitware.list >/dev/null
+  <% end %>
+  RUN apt-get update && apt-get install -y cmake
+
 <% else %>
 
   <% if distro =~ /rhel6/ %>
-  
+
     # CentOS 6 is dead - to use it retrieve the packages from vault:
     # https://stackoverflow.com/questions/53562691/error-cannot-retrieve-repository-metadata-repomd-xml-for-repository-base-pl
-  
+
     <%
-      
+
       cfg = <<-CFG
 [base]
 name=CentOS-$releasever - Base
@@ -141,11 +147,11 @@ gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-6
 CFG
 
     %>
-  
+
     RUN printf "<%= cfg.gsub("\n", "\\n") %>" >/etc/yum.repos.d/CentOS-Base.repo
-  
+
   <% end %>
-  
+
   # Enterprise server: net-snmp
   # lsb_release: redhat-lsb-core
   # our runner scripts: which
@@ -162,7 +168,7 @@ CFG
 
   RUN yum install -y redhat-lsb-core which git gcc libyaml krb5-server \
     krb5-workstation cyrus-sasl-devel cyrus-sasl-gssapi java-1.8.0-openjdk \
-    net-snmp python3
+    net-snmp python3 cmake
 
   <% if distro =~ /rhel6/ %>
 
@@ -178,7 +184,7 @@ CFG
     RUN yum install -y python-devel
 
   <% end %>
-  
+
 <% end %>
 
 <% if preload? %>
@@ -220,7 +226,7 @@ CFG
   <% when 'git' %>
     # dateutil dependency is missing in mtools: https://github.com/rueckstiess/mtools/issues/864
     RUN python3 -m pip install virtualenv 'pymongo>=4' python-dateutil psutil
-    
+
     # Install mtools from git because released versions do not work with pymongo 4.0
     RUN git clone https://github.com/p-mongodb/mtools && \
       cd mtools && \
@@ -254,10 +260,6 @@ CFG
     #ENV PATH=/opt/rubies/python/3/bin:$PATH
 
   <% end %>
-
-  RUN curl --retry 3 -fL <%= server_download_url %> |tar xzf - && \
-    mv mongo*/ /opt/mongodb
-  ENV USE_OPT_MONGODB=1 USE_SYSTEM_PYTHON_PACKAGES=1
 
 <% end %>
 
@@ -307,6 +309,9 @@ ENV MONGO_ORCHESTRATION_HOME=/tmpfs \
 <% end %>
 
 COPY . .
+
+RUN bash -c '. .mod/drivers-evergreen-tools/.evergreen/download-mongodb.sh && get_distro && get_mongodb_download_url_for "$DISTRO" "<%= server_version %>" && curl --retry 3 -fL $MONGODB_DOWNLOAD_URL |tar xzf - && mv mongo*/ /opt/mongodb'
+ENV USE_OPT_MONGODB=1 USE_SYSTEM_PYTHON_PACKAGES=1
 
 <% if expose? %>
 
