--- a/share/Dockerfile.erb
+++ b/share/Dockerfile.erb
@@ -310,7 +310,7 @@ ENV MONGO_ORCHESTRATION_HOME=/tmpfs \
 
 COPY . .
 
-RUN bash -c '. .mod/drivers-evergreen-tools/.evergreen/download-mongodb.sh && get_distro && get_mongodb_download_url_for "$DISTRO" "<%= server_version %>" && curl --retry 3 -fL $MONGODB_DOWNLOAD_URL |tar xzf - && mv mongo*/ /opt/mongodb'
+RUN bash -c '. .evergreen/download-mongodb.sh && get_distro && get_mongodb_download_url_for "$DISTRO" "<%= server_version %>" && curl --retry 3 -fL $MONGODB_DOWNLOAD_URL |tar xzf - && mv mongo*/ /opt/mongodb'
 ENV USE_OPT_MONGODB=1 USE_SYSTEM_PYTHON_PACKAGES=1
 
 <% if expose? %>
