Add debian11 to docker platforms

--- a/share/Dockerfile.erb
+++ b/share/Dockerfile.erb
@@ -87,15 +87,17 @@ ENV DOCKER=1
 
   <% if distro =~ /ubuntu2004/ %>
     <% packages << 'libsnmp35' %>
+  <% elsif distro =~ /debian11/ %>
+    <% packages << 'libsnmp40' %>
   <% else %>
     <% packages << 'libsnmp30' %>
   <% end %>
 
-  <% if distro !~ /ubuntu2004/ %>
+  <% if distro !~ /ubuntu2004|debian11/ %>
     <% packages << 'python-pip' %>
   <% end %>
 
-  <% if distro =~ /debian10/ %>
+  <% if distro =~ /debian10|debian11/ %>
     <% packages << 'openjdk-11-jdk-headless' %>
   <% elsif distro =~ /ubuntu1404/ %>
     # Ubuntu 14.04 only has openjdk 7, this is too old to be useful
@@ -105,7 +107,7 @@ ENV DOCKER=1
 
   # ubuntu1404, ubuntu1604: libcurl3
   # ubuntu1804, ubuntu2004, debian10: libcurl4
-  <% if distro =~ /ubuntu1804|ubuntu2004|debian10/ %>
+  <% if distro =~ /ubuntu1804|ubuntu2004|debian10|debian11/ %>
     <% packages << 'libcurl4' %>
   <% else %>
     <% packages << 'libcurl3' %>
