--- a/share/Dockerfile.erb
+++ b/share/Dockerfile.erb
@@ -82,7 +82,7 @@ ENV DOCKER=1
     krb5-user krb5-kdc krb5-admin-server libsasl2-dev libsasl2-modules-gssapi-mit
     haproxy
     python3-pip
-    tzdata shared-mime-info software-properties-common
+    tzdata shared-mime-info software-properties-common xz-utils
   ) %>
 
   <% if distro =~ /ubuntu2004/ %>
@@ -174,7 +174,7 @@ CFG
 
   RUN yum install -y redhat-lsb-core which git gcc libyaml krb5-server \
     krb5-workstation cyrus-sasl-devel cyrus-sasl-gssapi java-1.8.0-openjdk \
-    net-snmp python38 python38-devel cmake nodejs
+    net-snmp python38 python38-devel cmake nodejs xz
 
 <% end %>
 
