--- a/share/Dockerfile.erb
+++ b/share/Dockerfile.erb
@@ -78,7 +78,7 @@ ENV DOCKER=1
 
   <% packages = %w(
     procps lsb-release bzip2 curl wget gpg zsh
-    git make gcc g++ libyaml-0-2 libgmp-dev zlib1g-dev libsnappy-dev
+    git make gcc g++ libyaml-dev libgmp-dev zlib1g-dev libsnappy-dev
     krb5-user krb5-kdc krb5-admin-server libsasl2-dev libsasl2-modules-gssapi-mit
     haproxy
     python3-pip
@@ -168,7 +168,7 @@ CFG
   # "SASL(-4): no mechanism available: No worthy mechs found"
   # https://github.com/farorm/python-ad/issues/10
 
-  RUN yum install -y redhat-lsb-core which git gcc gcc-c++ libyaml krb5-server \
+  RUN yum --enablerepo=powertools install -y redhat-lsb-core which git gcc gcc-c++ libyaml-devel krb5-server \
     krb5-workstation cyrus-sasl-devel cyrus-sasl-gssapi java-1.8.0-openjdk \
     net-snmp python38 python38-devel cmake nodejs npm xz
 
