--- a/share/Dockerfile.erb
+++ b/share/Dockerfile.erb
@@ -52,7 +52,7 @@ ENV DOCKER=1
     git make gcc g++ libyaml-dev libgmp-dev zlib1g-dev libsnappy-dev
     krb5-user krb5-kdc krb5-admin-server libsasl2-dev libsasl2-modules-gssapi-mit
     haproxy libcurl4
-    python3-pip
+    python3-pip python3.9
     tzdata shared-mime-info software-properties-common xz-utils nodejs npm
     openjdk-17-jdk-headless
   ) %>
@@ -78,6 +78,7 @@ ENV DOCKER=1
   <% end %>
 
   RUN apt-get update && apt-get install -y <%= packages.join(' ') %>
+  RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.9 1
 
   <% if ubuntu? %>
     RUN wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null
